ZOLA version 0.2.0 - large upgrade

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,33 +2,35 @@
 
 # Author: Benoit Lelandais
 
-Plugins>ZOLA>  Camera setup, "EMCCD", org.pasteur.imagej.ZOLA("setcameraEMCCD")
-Plugins>ZOLA>  Camera setup, "SCMOS", org.pasteur.imagej.ZOLA("setcameraSCMOS")
+Plugins>ZOLA>  Camera setup, "EMCCD", org.pasteur.imagej.ZOLA("zola_setcameraEMCCD")
+Plugins>ZOLA>  Camera setup, "SCMOS", org.pasteur.imagej.ZOLA("zola_setcameraSCMOS")
 Plugins>ZOLA, "-", -
-Plugins>ZOLA, " Calibration: PSF modeling", org.pasteur.imagej.ZOLA("Calibration")
-Plugins>ZOLA, " Localization", org.pasteur.imagej.ZOLA("Localization")
+Plugins>ZOLA, " Calibration: PSF modeling", org.pasteur.imagej.ZOLA("zola_calibration")
+Plugins>ZOLA> Localization, " run", org.pasteur.imagej.ZOLA("zola_localization")
+Plugins>ZOLA> Localization, " test on current frame", org.pasteur.imagej.ZOLA("zola_localization_test")
 Plugins>ZOLA, "-", -
-Plugins>ZOLA>Import/Export, "Import table", org.pasteur.imagej.ZOLA("Import")
-Plugins>ZOLA>Import/Export, "Export table", org.pasteur.imagej.ZOLA("Export")
-Plugins>ZOLA>Import/Export, "Append table", org.pasteur.imagej.ZOLA("Append")
-Plugins>ZOLA>Import/Export, "Fuse table", org.pasteur.imagej.ZOLA("Fuse")
-Plugins>ZOLA>Drift correction, "3D Drift correction", org.pasteur.imagej.ZOLA("driftCorrection")
+Plugins>ZOLA>Import/Export, "Import table", org.pasteur.imagej.ZOLA("zola_import")
+Plugins>ZOLA>Import/Export, "Export table", org.pasteur.imagej.ZOLA("zola_export")
+Plugins>ZOLA>Import/Export, "Append table", org.pasteur.imagej.ZOLA("zola_append")
 
-Plugins>ZOLA>Drift correction, "reset correction", org.pasteur.imagej.ZOLA("resetDrift")
+Plugins>ZOLA>Drift correction, "3D Drift correction", org.pasteur.imagej.ZOLA("zola_driftCorrection")
 
-Plugins>ZOLA>, "Merging", org.pasteur.imagej.ZOLA("Condensation")
-Plugins>ZOLA>, "Filtering", org.pasteur.imagej.ZOLA("Filtering")
-Plugins>ZOLA>Visualization, "automatic 2D color histogram", org.pasteur.imagej.ZOLA("smartColorHist")
-Plugins>ZOLA>Visualization, "2D color histogram", org.pasteur.imagej.ZOLA("colorHist")
-Plugins>ZOLA>Visualization, "2D/3D histogram", org.pasteur.imagej.ZOLA("hist")
+Plugins>ZOLA>Drift correction, "reset correction", org.pasteur.imagej.ZOLA("zola_resetDrift")
+
+Plugins>ZOLA>, "Merging", org.pasteur.imagej.ZOLA("zola_condensation")
+Plugins>ZOLA>Filtering, "Crop and filter", org.pasteur.imagej.ZOLA("zola_filteringCrop")
+Plugins>ZOLA>Filtering, "Filter from histogram", org.pasteur.imagej.ZOLA("zola_filteringHistogram")
+Plugins>ZOLA>Visualization, "2D color histogram", org.pasteur.imagej.ZOLA("zola_colorHist")
+Plugins>ZOLA>Visualization, "2D/3D histogram", org.pasteur.imagej.ZOLA("zola_hist")
 Plugins>ZOLA, "-", -
-Plugins>ZOLA>additional tools, "CRLB", org.pasteur.imagej.ZOLA("CRLB")
-Plugins>ZOLA>additional tools, "localization histogram", org.pasteur.imagej.ZOLA("stathisto")
+Plugins>ZOLA>additional tools, "CRLB", org.pasteur.imagej.ZOLA("zola_crlb")
 
 
-Plugins>ZOLA>additional tools, "colorize opened 3D stack", org.pasteur.imagej.ZOLA("colorize")
-Plugins>ZOLA>additional tools, "Best PSF model optimization", org.pasteur.imagej.ZOLA("phaseoptim")
 
-#Plugins>ZOLA>additional tools>PSF generator, "Initialisation", org.pasteur.imagej.ZOLA("getModels_GPUalloc")
-#Plugins>ZOLA>additional tools>PSF generator, "computation", org.pasteur.imagej.ZOLA("getModels_GPUcomput")
-#Plugins>ZOLA>additional tools>PSF generator, "freeMemory", org.pasteur.imagej.ZOLA("getModels_GPUfree")
+Plugins>ZOLA>additional tools, "colorize opened 3D stack", org.pasteur.imagej.ZOLA("zola_colorize")
+
+
+
+
+Plugins>ZOLA>, "Configure", org.pasteur.imagej.ZOLA("zola_configure")
+
