--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>org.pasteur</groupId>
 	<artifactId>ZOLA_</artifactId>
-	<version>0.1.9-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 
 	<name>ZOLA</name>
 	<description>An ImageJ plugin for 3D localization microscopy.</description>
@@ -115,6 +115,13 @@
                         <artifactId>jcudnn</artifactId>
                         <version>0.8.0</version>
                 </dependency>
+                <!--<dependency>
+                    <groupId>org.pasteur</groupId>
+                    <artifactId>SMLM_IO</artifactId>
+                    <version>0.0.1-SNAPSHOT</version>
+                    <scope>system</scope>
+                    <systemPath>${basedir}/lib/SMLM_IO-0.0.1-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+                </dependency>-->
 	</dependencies>
         
         
