phase retrieval with apodization factor option + bug corrected

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -6,8 +6,7 @@ Plugins>ZOLA>  Camera setup, "EMCCD", org.pasteur.imagej.ZOLA("zola_setcameraEMC
 Plugins>ZOLA>  Camera setup, "SCMOS", org.pasteur.imagej.ZOLA("zola_setcameraSCMOS")
 Plugins>ZOLA, "-", -
 Plugins>ZOLA, " Calibration: PSF modeling", org.pasteur.imagej.ZOLA("zola_calibration")
-Plugins>ZOLA> Localization, " run", org.pasteur.imagej.ZOLA("zola_localization")
-Plugins>ZOLA> Localization, " test on current frame", org.pasteur.imagej.ZOLA("zola_localization_test")
+Plugins>ZOLA, " Localization", org.pasteur.imagej.ZOLA("zola_localization")
 Plugins>ZOLA, "-", -
 Plugins>ZOLA>Import/Export, "Import table", org.pasteur.imagej.ZOLA("zola_import")
 Plugins>ZOLA>Import/Export, "Export table", org.pasteur.imagej.ZOLA("zola_export")
