additional functions, including new visualisations and FRC computation

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -7,6 +7,7 @@ Plugins>ZOLA>  Camera setup, "SCMOS", org.pasteur.imagej.ZOLA("zola_setcameraSCM
 Plugins>ZOLA, "-", -
 Plugins>ZOLA, " Calibration: PSF modeling", org.pasteur.imagej.ZOLA("zola_calibration")
 Plugins>ZOLA, " Localization", org.pasteur.imagej.ZOLA("zola_localization")
+Plugins>ZOLA, " LocalizationHD", org.pasteur.imagej.ZOLA("zola_localizationHD")
 Plugins>ZOLA, "-", -
 Plugins>ZOLA>Import/Export, "Import table", org.pasteur.imagej.ZOLA("zola_import")
 Plugins>ZOLA>Import/Export, "Export table", org.pasteur.imagej.ZOLA("zola_export")
@@ -21,8 +22,11 @@ Plugins>ZOLA>Filtering, "Crop and filter", org.pasteur.imagej.ZOLA("zola_filteri
 Plugins>ZOLA>Filtering, "Filter from histogram", org.pasteur.imagej.ZOLA("zola_filteringHistogram")
 Plugins>ZOLA>Visualization, "2D color histogram", org.pasteur.imagej.ZOLA("zola_colorHist")
 Plugins>ZOLA>Visualization, "2D/3D histogram", org.pasteur.imagej.ZOLA("zola_hist")
+Plugins>ZOLA>Visualization, "Gaussian histogram", org.pasteur.imagej.ZOLA("zola_histGaussian")
 Plugins>ZOLA, "-", -
 Plugins>ZOLA>additional tools, "CRLB", org.pasteur.imagej.ZOLA("zola_crlb")
+
+Plugins>ZOLA>additional tools, "FRC-FSC", org.pasteur.imagej.ZOLA("zola_frc_fsc")
 
 
 
